fix a button spacing & heading font size inconsistencies

--- a/2-html-css/css/style.css
+++ b/2-html-css/css/style.css
@@ -29,13 +29,15 @@ main {
   display: flex;
   align-items: center;
   justify-content: center;
-  flex-wrap: wrap;
+  /* flex-wrap: wrap; */
+  flex-direction: column;
   margin: 100px 25px;
   font-family: "Lexend Deca", sans-serif;
 }
 
 section {
   padding: 50px;
+  max-width: 350px;
 }
 
 section img {
@@ -43,13 +45,14 @@ section img {
 }
 
 section p {
-  margin-bottom: 25px;
+  margin-bottom: 35px;
   line-height: 1.5rem;
 }
 
 section h2 {
   font-family: "Big Shoulders Display", cursive;
   margin-bottom: 25px;
+  font-size: 2.5rem;
 }
 
 /* Section specifics */
@@ -73,6 +76,7 @@ section .btn {
   background: var(--neutral-buttons);
   padding: 10px 30px;
   border-radius: 20px;
+  margin-bottom: 10px;
 }
 
 /* Section specific buttons */
@@ -86,4 +90,18 @@ section .btn {
 
 .btn-dark {
   color: var(--primary-dark);
+}
+
+@media (min-width: 768px) {
+  main {
+    flex-direction: row;
+  }
+
+  section {
+    max-width: 310px;
+  }
+
+  section p {
+    margin-bottom: 75px;
+  }
 }
